--- a/elements.css
+++ b/elements.css
@@ -364,3 +364,61 @@ td {
   vertical-align: middle;
   border-radius: 50%;
 }
+
+#modalImage1,
+#modalImage2,
+#modalImage3 {
+  width: 400px;
+  height: 400px;
+  object-fit: contain;
+  vertical-align: middle;
+}
+
+#software,
+#education {
+  background-color: #ddd;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+#modalHeader {
+  font-family: "Dancing Script", cursive;
+}
