Replaced landing page picture with pciture of myself

--- a/elements.css
+++ b/elements.css
@@ -194,7 +194,7 @@ h4 {
 }
 .parallax {
   /* The image used */
-  background: url(images/5.jpg);
+  background: url(images/me3.jpg);
 
   /* Set a specific height */
   height: 100%;
