--- a/elements.css
+++ b/elements.css
@@ -369,8 +369,8 @@ td {
 #modalImage1,
 #modalImage2,
 #modalImage3 {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
   vertical-align: middle;
 }
