--- a/elements.css
+++ b/elements.css
@@ -96,7 +96,7 @@ nav ul li a {
   transition: all 0.5s ease-in-out 0s;
 }
 nav a:hover {
-  color: #e1803c;
+  color: #3498db;
 }
 
 .navbar-brand {
@@ -106,7 +106,7 @@ nav a:hover {
   color: black;
 }
 #menu a:hover {
-  color: #e1803c;
+  color: #3498db;
 }
 
 /**********************************
@@ -114,7 +114,7 @@ nav a:hover {
 ***********************************/
 .typewriter h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid #e1803c; /* The typwriter cursor */
+  border-right: 0.15em solid #3498db; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: 0.15em; /*Adjust as needed */
@@ -148,7 +148,7 @@ nav a:hover {
     border-color: transparent;
   }
   50% {
-    border-color: #e1803c;
+    border-color: #3498db;
   }
 }
 
@@ -176,7 +176,7 @@ h4 {
   font-weight: 400 !important;
 }
 #BG {
-  background-color: #e1803c;
+  background-color: #3498db;
   height: 100%;
   height: 100vh;
 }
@@ -272,7 +272,7 @@ hr {
 /* Style the social media icons with color, if you want */
 .icon-bar a:hover {
   /* background-color: black; */
-  color: #e1803c;
+  color: #3498db;
 }
 
 .icon {
@@ -381,8 +381,7 @@ td {
 }
 
 /* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
+.modal11 {
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
@@ -394,32 +393,21 @@ td {
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.mySlides {
-  display: none;
+.modal.and.carousel {
+  position: fixed;
 }
 
 #modalHeader {
   font-family: "Dancing Script", cursive;
+}
+body.modal-open {
+  overflow: visible;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%233498db' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%233498db' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
